[package]
name = "gourgeist"
version = "0.0.4"
publish = false
description = "virtualenv creation implemented in rust"
keywords = ["virtualenv", "venv", "python"]

edition = { workspace = true }
rust-version = { workspace = true }
homepage = { workspace = true }
documentation = { workspace = true }
repository = { workspace = true }
authors = { workspace = true }
license = { workspace = true }

[[bin]]
name = "gourgeist"
required-features = ["cli"]

[lints]
workspace = true

[dependencies]
platform-host = { path = "../platform-host" }
uv-cache = { path = "../uv-cache" }
uv-interpreter = { path = "../uv-interpreter" }

anstream = { workspace = true }
camino = { workspace = true }
clap = { workspace = true, features = ["derive"], optional = true }
directories = { workspace = true }
fs-err = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tempfile = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, optional = true }
which = { workspace = true }

[features]
cli = ["clap", "tracing-subscriber"]
