[package]
name = "install-wheel-rs"
version = "0.0.1"
publish = false
description = "Takes a wheel and installs it, either in a venv or for monotrail"
keywords = ["wheel", "python"]

edition = { workspace = true }
rust-version = { workspace = true }
homepage = { workspace = true }
documentation = { workspace = true }
repository = { workspace = true }
authors = { workspace = true }
license = { workspace = true }

[lib]
name = "install_wheel_rs"

[dependencies]
platform-host = { path = "../platform-host" }
distribution-filename = { path = "../distribution-filename" }

clap = { workspace = true, optional = true, features = ["derive", "env"] }
configparser = { workspace = true }
csv = { workspace = true }
data-encoding = { workspace = true }
fs-err = { workspace = true }
fs2 = { workspace = true }
fxhash = { workspace = true }
glibc_version = { workspace = true }
goblin = { workspace = true }
mailparse = { workspace = true }
once_cell = { workspace = true }
platform-info = { workspace = true }
plist = { workspace = true }
pyo3 = { version = "0.19.2", features = ["extension-module", "abi3-py37"], optional = true }
rayon = { version = "1.8.0", optional = true }
reflink-copy = { workspace = true }
regex = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
sha2 = { workspace = true }
target-lexicon = { workspace = true }
tempfile = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, optional = true }
walkdir = { workspace = true }
zip = { workspace = true }

[features]
default = ["cli", "parallel"]
python_bindings = ["pyo3", "tracing-subscriber"]
cli = ["clap"]
parallel = ["rayon"]

[dev-dependencies]
indoc = {version = "2.0.4"}
