[package]
name = "pep440_rs"
version = "0.3.12"
description = "A library for python version numbers and specifiers, implementing PEP 440"
edition = "2021"
include = ["/src", "Changelog.md", "License-Apache", "License-BSD", "Readme.md", "pyproject.toml"]
license = "Apache-2.0 OR BSD-2-Clause"
repository = "https://github.com/konstin/pep440-rs"
readme = "Readme.md"

[lib]
name = "pep440_rs"
crate-type = ["rlib", "cdylib"]

[dependencies]
once_cell = { workspace = true }
regex = { workspace = true }
serde = { workspace = true, features = ["derive"], optional = true }
tracing = { workspace = true, optional = true }
unicode-width = { workspace = true }

pyo3 = { version = "0.19", optional = true, features = ["extension-module", "abi3-py37"] }

[dev-dependencies]
indoc = "2.0.1"
