[package]
name = "pep440_rs"
version = "0.6.0"
description = "A library for python version numbers and specifiers, implementing PEP 440"
license = "Apache-2.0 OR BSD-2-Clause"
include = ["/src", "Changelog.md", "License-Apache", "License-BSD", "Readme.md", "pyproject.toml"]
edition = { workspace = true }
rust-version = { workspace = true }
homepage = { workspace = true }
documentation = { workspace = true }
repository = { workspace = true }
authors = { workspace = true }

[lib]
name = "pep440_rs"
crate-type = ["rlib", "cdylib"]

[lints]
workspace = true

[dependencies]
pyo3 = { workspace = true, optional = true, features = ["extension-module", "abi3-py37"] }
serde = { workspace = true, features = ["derive"] }
rkyv = { workspace = true }
tracing = { workspace = true, optional = true }
unicode-width = { workspace = true }
unscanny = { workspace = true }

[dev-dependencies]
indoc = { version = "2.0.5" }

[features]
# Match the API of the published crate, for compatibility.
serde = []
