[package]
name = "pep508_rs"
version = "0.2.3"
description = "A library for python dependency specifiers, better known as PEP 508"
include = ["/src", "Changelog.md", "License-Apache", "License-BSD", "Readme.md", "pyproject.toml"]
license = "Apache-2.0 OR BSD-2-Clause"

edition = { workspace = true }
rust-version = { workspace = true }
homepage = { workspace = true }
documentation = { workspace = true }
repository = { workspace = true }
authors = { workspace = true }

[lib]
name = "pep508_rs"
crate-type = ["cdylib", "rlib"]

[dependencies]
pep440_rs = { path = "../pep440-rs" }
puffin-normalize = { path = "../puffin-normalize" }

derivative = { workspace = true }
once_cell = { workspace = true }
pyo3 = { workspace = true, optional = true, features = ["abi3", "extension-module"] }
pyo3-log = { workspace = true, optional = true }
regex = { workspace = true }
serde = { workspace = true, features = ["derive"], optional = true }
serde_json = { workspace = true, optional = true }
thiserror = { workspace = true }
tracing = { workspace = true, features = ["log"] }
unicode-width = { workspace = true }
url = { workspace = true, features = ["serde"] }

[dev-dependencies]
indoc = "2.0.4"
log = "0.4.20"
testing_logger = "0.1.1"
serde_json = "1.0.108"

[features]
pyo3 = ["dep:pyo3", "pep440_rs/pyo3", "pyo3-log"]
serde = ["dep:serde", "pep440_rs/serde"]
default = []
