[package]
name = "platform-host"
version = "0.0.1"
edition = { workspace = true }
rust-version = { workspace = true }
homepage = { workspace = true }
documentation = { workspace = true }
repository = { workspace = true }
authors = { workspace = true }
license = { workspace = true }

[lints]
workspace = true

[dependencies]
fs-err = { workspace = true }
goblin = { workspace = true }
once_cell = { workspace = true }
platform-info = { workspace = true }
plist = { workspace = true }
regex = { workspace = true }
serde = { workspace = true, features = ["derive"] }
target-lexicon = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
