[package]
name = "puffin-cache"
version = "0.0.1"
description = "Generate stable hash digests across versions and platforms."
edition = { workspace = true }
rust-version = { workspace = true }
homepage = { workspace = true }
documentation = { workspace = true }
repository = { workspace = true }
authors = { workspace = true }
license = { workspace = true }

[dependencies]
clap = { workspace = true, features = ["derive"] }
directories = { workspace = true }
hex = { workspace = true }
seahash = { workspace = true }
tempfile = { workspace = true }
url = { workspace = true }
